# azac

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cache.rs  commands.rs  context.rs  convert.rs  main.rs
src/azcli/: appconfig.rs  error.rs  mod.rs  run.rs  subscription.rs
src/cmd/: context.rs  mod.rs  setup.rs
src/context/: error.rs  mod.rs  model.rs  service.rs  store.rs
src/prompt/: edit_context.rs  mod.rs  setup_context.rs
