[package]
name = "azac"
version = "0.2.6"
edition = "2024"
description = "better azure cli app configuration"
license = "MIT"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
toml = "0.8"
heck = "0.4"
indicatif = "0.17"
inquire = "0.7"
owo-colors = "4"
tabled = { version = "0.16", default-features = false, features = ["std", "derive"] }
